// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/CButton Default smoke-test 1`] = `
<button class="cmpui_button"
        data-variant="primary"
        data-size="M"
        default="Button"
>
  Button
</button>
`;

exports[`components/CButton Disabled smoke-test 1`] = `
<button class="cmpui_button"
        data-variant="primary"
        data-size="M"
        disabled
        default="Button"
>
  Button
</button>
`;

exports[`components/CButton Secondary smoke-test 1`] = `
<button class="cmpui_button"
        data-variant="secondary"
        data-size="M"
        default="Button"
>
  Button
</button>
`;

exports[`components/CButton Small smoke-test 1`] = `
<button class="cmpui_button"
        data-variant="primary"
        data-size="S"
        default="Button"
>
  Button
</button>
`;
